Fix company name size and middle initial [#36325385] Change Middle Name to Middle Inital [#37536677] On listing, Company name is a bit too large

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -148,6 +148,31 @@ fieldset
     &.actions
       text-align: right
 
+  ul.horizontal
+    padding-left: 148px
+
+    & > li
+      float: left
+      // $width: 282px
+      $width: 140px
+      width: $width
+      margin: 0 15px 15px 0
+
+      &.short
+        $short_width: 62px
+        width: $short_width
+        & > input
+          width: $short_width - 12px
+
+      & > label
+        width: 100%
+        display: block
+        text-align: left
+        margin-bottom: 2px
+      & > input
+        width: $width - 12px
+        display: block
+
   .actions
     clear: both
     margin-left: 10px
